add colorful emoji example and readme